# pp_playground

./: .gitignore  .ssh  .ssh.pub  CUDA_benchmark.ipynb  README.md  openMP.ipynb
GameOfLife/: README.ipynb  README.md  bench_AllSteps.txt  benchmark.txt  makefile  per_step.py  plot_testbench.py
GameOfLife/assets/: cuda_kernel.cuh
GameOfLife/common/: common.h  common_cuda.cuh
GameOfLife/cuda_v0/: Gol.cu  cuda_kernel.cuh
GameOfLife/cuda_v1/: cuda_kernel.cuh
GameOfLife/cuda_v2/: cuda_kernel.cuh
GameOfLife/openMP/: Gol.c  omp_kernel.h
JuliaFilter/: JF-cuda.cu  JF-openMP.cpp  JF.cpp  Makefile  TrabalhoFinal.ipynb  tempo_JF-cuda.csv  tempo_JF-openMP.csv  tempo_JF.csv
JuliaFilter/include/: PNM.h  cuda_kernels.cuh  structs_inputs.h
MPI/: MPI_intro.ipynb
MatricesOpGPU/: CMakeLists.txt  README.md  benchmark.cu  main.cpp  main.cu
MatricesOpGPU/include/: cuda-libmat.cuh  cudaLinalg.cuh  cudaLinalg.h  cudaMatrix.cpp  cudaMatrix.cuh  cudaMatrix.h  cuda_common.cuh  cuda_common.h  cuda_kernels.cuh  test
MatricesOpGPU/src/: CMakeLists.txt  cudaLinalg.cpp  cudaLinalg.cu  cudaMatrix.cpp  cudaMatrix.cu  kernel.cu
MatricesOpGPU/src/kernels/: cuda_kernels.cuh  kernel.cu
MatricesOpGPU/testing_samples/: test.cpp
MaxSumVectorial/: Makefile  input-generator.c  maxSum-cuda.cu  maxSum.c
MaxSumVectorial/include/: cuda-kernels.cuh  serial.h
SYCL_Learning/Pipes/: README.md  main.cpp
SYCL_Learning/matmul_v0/: CMakeLists.txt  README.md
SYCL_Learning/matmul_v0/src/: Matrix.hpp
SYCL_Learning/matmul_v1/: README.md
SYCL_Learning/matmul_v1/src/: Matrix.hpp  kernel.hpp  main.cpp
SYCL_Learning/matricial_op/src/: kernel.hpp  main.cpp
Sorting/: 1  Makefile  helper.cuh  input  input.c  odd-even  odd-even.c  odd-even.cu  odd-even_v1.cu
Sorting/include/: common.h  helper.cuh
__Theory/: nvidia-MultGPU.ipynb  nvidia-std_lib.ipynb
__Theory/std_lib/: par_01.cpp  par_02.cpp  par_02_correct.cpp  par_03.cpp
openMP/: openMP.ipynb
openMP/src/: 01-intro.c  02-array  02-array.c  03-for_OMP  03-for_OMP.c  03-for_serial  03-for_serial.c  03-matmul  03-matmul.c
source/: 02-array.c  03-for.c  03-for_OMP.c
